tests/suite/snapshots/suite__check__tests__check__bad_class_cycle_1.xi.snap
---
source: tests/suite/check.rs
assertion_line: 35
expression: Snapshot(context)
---
Error: Semantic error
   ╭─[tests/check/bad_class_cycle_1.xi:1:7]
   │
 1 │ class A extends A {}
   ·       ┬  
   ·       ╰── Class hierarchy for class A forms a cycle
───╯

